--- a/index.html
+++ b/index.html
@@ -7,56 +7,59 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
+            background-color: #f0f2f5;
             color: #333;
             margin: 0;
             padding: 0;
         }
         .container {
             max-width: 900px;
-            margin: 0 auto;
+            margin: 40px auto;
             padding: 20px;
             background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
         header {
             text-align: center;
-            padding: 40px 0;
+            padding: 30px 0;
             background-color: #333;
             color: #fff;
-            border-radius: 8px 8px 0 0;
+            border-radius: 10px 10px 0 0;
         }
         header h1 {
             margin: 0;
             font-size: 2.5em;
+            letter-spacing: 1px;
         }
         header p {
             margin: 10px 0 0;
             font-size: 1.2em;
-            color: #bbb;
+            color: #ccc;
         }
         section {
-            margin: 20px 0;
+            margin: 30px 0;
         }
         section h2 {
             font-size: 1.8em;
+            color: #444;
             border-bottom: 2px solid #333;
             padding-bottom: 10px;
             margin-bottom: 20px;
         }
         .about, .contact {
-            padding: 10px 20px;
+            padding: 0 20px;
         }
         .about p {
-            line-height: 1.6;
+            line-height: 1.8;
             font-size: 1.1em;
+            color: #555;
         }
         .contact p {
             font-size: 1.1em;
         }
         .contact a {
-            color: #333;
+            color: #007bff;
             text-decoration: none;
             font-weight: bold;
         }
@@ -68,8 +71,8 @@
             padding: 20px 0;
             background-color: #333;
             color: #fff;
-            border-radius: 0 0 8px 8px;
-            margin-top: 20px;
+            border-radius: 0 0 10px 10px;
+            margin-top: 40px;
         }
         @media (max-width: 600px) {
             header h1 {
