--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </header>
         <section class="about">
             <h2>About Me</h2>
-            <p>Hello! I am Mert Süleyman Yaşaroğlu, a Business Analyst. I specialize in analyzing business processes to increase efficiency and optimize workflows. I have a passion for new technologies and constantly strive to improve myself.</p>
+            <p>I am a graduate of Namık Kemal University with a degree in International Relations, currently working as a Business Analyst. My analytical thinking skills, combined with my experience in data analysis and process improvement, enable me to provide effective solutions for optimizing business processes and making strategic decisions. I specialize in project management, business requirements analysis, and identifying user needs. I am a detail-oriented professional with strong problem-solving abilities and a collaborative team player.</p>
         </section>
         <section class="contact">
             <h2>Contact</h2>
